[metadata]
name = concreteproperties
version = attr: concreteproperties.__version__
description = A python package to determine cross-section propreties of reinforced concrete sections
url = https://github.com/robbievanleeuwen/concrete-properties
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
license_file = LICENSE.md
keyword = concrete, reinforced-concrete, cross-section, structural-engineering, finite-element-analysis
author = Robbie van Leeuwen
author_email = robbie.vanleeuwen@gmail.com
classifiers =
    Development Status :: 2 - Pre-Alpha
    Topic :: Scientific/Engineering
    Environment :: Console
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    Natural Language :: English
    Operating System :: POSIX :: Linux
    Operating System :: MacOS :: MacOS X
    Operating System :: Microsoft :: Windows
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
project_urls =
    Source =  https://github.com/robbievanleeuwen/concrete-properties
    Tracker = https://github.com/robbievanleeuwen/concrete-properties/issues

[options]
packages = find:
platforms = any
include_package_data = True
python_requires = >=3.7
setup_requires =
    setuptools
install_requires =
    numpy
    scipy
    matplotlib>=3.4
    triangle
    sectionproperties
    rich
